--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <div class="container">
 <header>
-    <img class="img" src="../NewBee/Images/logo-BL main  (2).png" alt="Logo for easy logistics llc">
+    <img class="img" src="../logo-BL main  (2).png" alt="Logo for easy logistics llc">
 </header>
 
 <nav>
